2006-12-18  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh: For man page rule, create the dest directory.

	* Makefile.gen.sh (files.list): Include .xml files.  Add code to
	generate .xml to .man using files.list as input.
	(check_MANS): Rename echo_MANS.  Simplify.

2006-12-18  Stepan Kasal  <skasal@redhat.com>

	* m4/frysk_do_arch32_test.m4 (--disable-arch32-tests): New
	option to skip building arch32 tests.
	* frysk-common.ac: Do not call FRYSK_DO_ARCH32_TEST.
	* Makefile.gen.sh: Do not use "if DO_ARCH32_TEST" for
	variables which can appear in packages without arch32 tests.
	(arch32_cflags_output): Removed, it was modified only in
	subshells, which was confusing.
	(arch32_cflag_name, arch32_as_cflag_name): Add comment.

2006-12-14  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (JUnitTests.java): Filter out TestCase, not
	JUnit.

2006-12-14  Stepan Kasal  <skasal@redhat.com>

	* frysk-common.ac (lib32dir): Fix the code for case when
	${libdir} matches *64*, so that it matches the comment.

2006-12-13  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (pkglibdir): Fix typo, really define as
	$(lib32dir)/@PACKAGE@.

	* Makefile.gen.sh (GEN_ARGS): Set to "$@".

	* frysk-common.ac: Set lib32dir.
	* Makefile.rules (pkglib32dir): Define as $(lib32dir)/@PACKAGE@.

	* Makefile.gen.sh (${dir}32_programs): Rename
	${dir}_arch32_programs,
	* Makefile.rules (pkglib32dir): Rename pkglib_arch32dir.
	(pkglib32): Rename pkglib_arch.
	(SUBST_SED): Update references.
	
	* Makefile.rules (SUBST_SED): Substitute pkglib32dir, instead of
	pkglib_arch32dir.

2006-12-12  Stepan Kasal  <skasal@redhat.com>

	* common/Makefile.rules: Remove the support for libexecdir
	programs; it's not compatible with multilib.
	* common/Makefile.gen.sh: Do not mention libexecdir in the
	help; mention pkglibdir instead.

2006-12-11  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (checked-for-eclipse-residue): Exit when fail.
	(checked-for-dejagnu): Ditto.
