@@ -1,3 +1,8 @@
+2006-12-19  Andrew Cagney  <cagney@redhat.com>
+
+	* Makefile.am (frysk/pkglibdir/fsystest): Delete rule, moved to
+	Makefile.gen.sh.
+
 2006-12-18  Andrew Cagney  <cagney@redhat.com>
 
 	* Makefile.am (pkglib_SCRIPTS): Add frysk/pkglibdir/fsystest.
